--- a/index.html
+++ b/index.html
@@ -1,22 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Hello!</title>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css">
 
-  </head>  
+  </head>
   <body>
     <!--repalce this h1 and p content with your own html table -->
-    <h1>Hi there!</h1>
+    <table>
+      <tr>
+         <th scope="col">BAND</th>
+         <th scope="col">YEAR-FORMED</th>
+         <th scope="col">No. OF ALBUMS</th>
+         <th scope="col">MOST FAMOUS SONG</th>
+         </tr>
+      <tr>
+         <td class="One">Buzzcocks</td>
+         <td class="One">1976</td>
+         <td class="One">9</td>
+        <td class="One">Ever Fallen In Love (With Someone You Shouldn’t’ve?)</td>
+      </tr>
+      <tr>
+         <td class="Two">The Clash</td>
+         <td class="Two">1976</td>
+         <td class="Two">6</td>
+         <td class="Two">London Calling</td>
+              </tr>
+              <tr>
+         <td class="One">The Damned</td>
+         <td class="One">1976</td>
+         <td class="One">10</td>
+         <td class="One">Smash it Up</td>
+      </tr>
+      <tr>
+         <td class="Two">Sex Pistols</td>
+         <td class="Two">1975</td>
+         <td class="Two">1</td>
+         <td class="Two">Anarchy in the UK</td>
+      </tr>
+            <tr>
+         <td class="One">Sham 69</td>
+         <td class="One">1976</td>
+         <td class="One">13</td>
+         <td class="One">If The Kids Are United</td>
+      </tr>
+      <tr>
+         <td class="Two">Siouxsie and the Banshees</td>
+         <td class="Two">1976</td>
+         <td class="Two">11</td>
+         <td class="Two">Hong Kong Garden</td>
+      </tr>
+       <tr>
+         <td class="One">Stiff Little Fingers</td>
+         <td class="One">1977</td>
+         <td class="One">10</td>
+         <td class="One">Suspect Device</td>
+      </tr>
+      <tr>
+         <td class="Two">The Stranglers</td>
+         <td class="Two">1974</td>
+         <td class="Two">17</td>
+         <td class="Two">No More Heroes</td>
+      </tr>
+      <tr>
+         <td class = "Three" colspan="2" >TOTAL ALBUMS</td>
+         <td class = "Four" colspan="2" >77</td>
+      </tr>
+        <caption>A SUMMARY OF THE UK MOST FAMOUS PUNK BANDS</caption>
+     </table>
 
-    <p>
-      I'm your cool new webpage. Made with <a href="https://glitch.com">Glitch</a>!
-    </p>
+
+
+
+
+
 
     <!-- include the Glitch button to show what the webpage is about and
           to make it easier for folks to view source and remix -->
